<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_my_location_black_24dp"
                android:title="@string/menu_home"/>
        <item
                android:id="@+id/nav_activituy_recognition"
                android:icon="@drawable/ic_directions_run_black_24dp"
                android:title="@string/menu_activity_recognition"/>
        <item
                android:id="@+id/nav_google_map"
                android:icon="@drawable/ic_map_black_24dp"
                android:title="@string/menu_google_map"/>
        <item
                android:id="@+id/nav_geofences"
                android:icon="@drawable/ic_golf_course_black_24dp"
                android:title="@string/menu_geofences"/>
    </group>



</menu>
